<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TextView pour afficher les résultats -->
    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="1in"
        android:text=""
        android:textSize="48sp"
        android:layout_margin="8dp"
        android:background="#e0e0e0"
        android:padding="16dp"/>

    <!-- TableLayout pour les boutons -->
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">

        <TableRow>
            <Button
                android:id="@+id/button_left_parenthesis"
                style="@style/Button"
                android:text="@string/left_parenthesis" />
            <Button
                android:id="@+id/button_right_parenthesis"
                style="@style/Button"
                android:text="@string/right_parenthesis" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_1"
                style="@style/Button"
                android:text="@string/n1" />

            <Button
                android:id="@+id/button_2"
                style="@style/Button"
                android:text="@string/n2" />

            <Button
                android:id="@+id/button_3"
                style="@style/Button"
                android:text="@string/n3" />

            <Button
                android:id="@+id/button_addition"
                style="@style/Button"
                android:text="@string/addition" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_4"
                style="@style/Button"
                android:text="@string/n4" />

            <Button
                android:id="@+id/button_5"
                style="@style/Button"
                android:text="@string/n5" />

            <Button
                android:id="@+id/button_6"
                style="@style/Button"
                android:text="@string/n6" />

            <Button
                android:id="@+id/button_substraction"
                style="@style/Button"
                android:text="@string/substraction" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_7"
                style="@style/Button"
                android:text="@string/n7" />

            <Button
                android:id="@+id/button_8"
                style="@style/Button"
                android:text="@string/n8" />

            <Button
                android:id="@+id/button_9"
                style="@style/Button"
                android:text="@string/n9" />

            <Button
                android:id="@+id/button_multiplication"
                style="@style/Button"
                android:text="@string/multiplication" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_0"
                style="@style/Button"
                android:text="@string/n0" />

            <Button
                android:id="@+id/button_dot"
                style="@style/Button"
                android:text="@string/dot" />

            <Button
                android:id="@+id/button_reset"
                android:onClick="clearCalcul"
                android:text="@string/reset"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_division"
                style="@style/Button"
                android:text="@string/division" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_equality"
                android:layout_span="4"
                android:text="@string/equality"
                android:onClick="evaluate"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
